Announcement class. AnnouncementsPayload (reply to READ / READ_GENERAL). Changed PayloadFactory to Java 13 (need to enable preview features in intellij to run! or use maven)